--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,43 @@
-asgiref==3.5.2
-backports.zoneinfo==0.2.1
-coreapi==2.3.3
-coreschema==0.0.4
-cryptography==38.0.3
-Django==4.1.4
-django-cors-headers==3.13.0
+asgiref==3.7.2
+attrs==23.1.0
+autobahn==23.6.2
+Automat==22.10.0
+certifi==2023.7.22
+cffi==1.16.0
+channels==4.0.0
+charset-normalizer==3.3.2
+constantly==23.10.4
+cryptography==41.0.5
+daphne==4.0.0
+defusedxml==0.8.0rc2
+Django==4.2.7
+django-cors-headers==4.3.0
+django-environ==0.11.2
+django-filter==23.3
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
-djangorestframework-simplejwt==4.8.0
-djoser==2.1.0
-itypes==1.2.0
+djangorestframework-simplejwt==5.3.0
+djoser==2.2.0
+hyperlink==21.0.0
+idna==3.4
+incremental==22.10.0
 oauthlib==3.2.2
-PyJWT==2.6.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
+PyJWT==2.8.0
+pyOpenSSL==23.3.0
 python3-openid==3.2.0
-pytz==2022.6
+pytz==2023.3.post1
+requests==2.31.0
 requests-oauthlib==1.3.1
-social-auth-app-django==4.0.0
-social-auth-core==4.3.0
-sqlparse==0.4.2
-tzdata==2022.2
-uritemplate==4.1.1
+service-identity==23.1.0
+six==1.16.0
+social-auth-app-django==5.4.0
+social-auth-core==4.5.0
+sqlparse==0.4.4
+Twisted==23.10.0
+txaio==23.1.1
+typing_extensions==4.8.0
+urllib3==2.0.7
+zope.interface==6.1
